# ferroterm

./: .gitignore  CHANGELOG.md  COMPARISON.md  Cargo.toml  README.md  build.sh  index.html
.github/workflows/: ci.yml  pages.yml
apps/desktop/: package-lock.json  package.json  sync.mjs
apps/desktop/src/: app.css  index.html  main.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: battery.rs  main.rs  pty.rs
apps/native/: Cargo.toml
apps/native/examples/: bench.rs  shot.rs
apps/native/shaders/: cell.wgsl  image.wgsl
apps/native/src/: atlas.rs  images.rs  input.rs  lib.rs  main.rs  palette.rs  pty.rs  renderer.rs  selection.rs  snapshot.rs
apps/native/tests/: render.rs  selection.rs
apps/slint/: Cargo.toml  README.md  build.rs
apps/slint/examples/: bench.rs
apps/slint/src/: keymap.rs  lib.rs  main.rs  palette.rs  pty.rs  raster.rs  snapshot.rs
apps/slint/tests/: integration.rs
apps/slint/ui/: main.slint
bench/: compare.html  package-lock.json  package.json
crates/core/: Cargo.toml
crates/core/examples/: bench.rs  profile.rs
crates/core/src/: cell.rs  grid.rs  img.rs  keys.rs  kitty.rs  lib.rs  palette.rs  parser.rs  reflow.rs  sixel.rs  terminal.rs  width.rs
crates/core/tests/: conformance.rs  kitty_graphics.rs  shell_marks.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
examples/: benchmark.html  index.html  shell.js  webserial.html
web/: ferroterm.css  ferroterm.d.ts  package.json
web/src/: bench.js  ferroterm.js  index.js  model.js  palette.js  renderer-canvas.js  renderer-dom.js  renderer-webgl.js
web/test/: element.html  image.html  render.html  run.mjs
