[package]
name = "ferroterm-slint"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Slint front-end for ferroterm-core: a native terminal that software-rasterizes the grid into a Slint Image."
repository = "https://github.com/DatanoiseTV/ferroterm"

# Its own package (not part of the core workspace, like apps/native): it pulls
# in Slint's renderer + a PTY, which the library crates must stay free of.

[lib]
name = "ferroterm_slint"
path = "src/lib.rs"

[[bin]]
name = "ferroterm-slint"
path = "src/main.rs"

[dependencies]
ferroterm-core = { path = "../../crates/core" }
# Slint has no raw per-pixel canvas widget, so the terminal grid is software-
# rasterized (fontdue) into an RGBA SharedPixelBuffer shown as an `Image`.
slint = "1.17"
fontdue = "0.9"
ttf-parser = "0.24"
portable-pty = "0.8"

[build-dependencies]
slint-build = "1.17"

[profile.release]
opt-level = 3
lto = true
