# Standalone workspace: the desktop app has its own heavy dependency tree
# (tauri/wry) and is intentionally not part of the core library workspace.
[workspace]

[package]
name = "ferroterm-desktop"
description = "A tabbed terminal application built on ferroterm."
version = "0.1.0"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
battery = "0.7"

[features]
# Enables the default webview; used by `tauri dev`/`tauri build`.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
